syntax="proto3";

package com.distkv.rpc.protobuf;

option java_package="com.distkv.rpc.protobuf.generated";
option java_outer_classname="CommonProtocol";

enum Status {
    OK = 0;
    KEY_NOT_FOUND = 1;
    UNKNOWN_ERROR = 2;
    UNKNOWN_REQUEST_TYPE = 3;
    LIST_INDEX_OUT_OF_BOUNDS = 4;

    // The key of the dict is not found.
    DICT_KEY_NOT_FOUND = 5;
    // The Member of SortedList is not found.
    SLIST_MEMBER_NOT_FOUND = 6;
    // The topNum of SortedList is less than zero.
    SLIST_TOPNUM_BE_POSITIVE = 7;
    // Return when master-slave synchronization error occurs
    SYNC_ERROR = 8;
    // The key of the set is not found.
    SET_ITEM_NOT_FOUND = 9;

    DUPLICATED_KEY = 10;
};

//Query if a key exists.
message ExistsResponse {
    bool exists = 1;
}
